--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -15,14 +15,14 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
     "react-transition-group": "4.4.2",
-    "serve": "13.0.2",
+    "serve": "^13.0.2",
     "stylus": "0.55.0"
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "react-scripts start",
+    "start": "serve ./build",
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "eject": "react-scripts eject",
     "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
     "now-build": "npm run build && mv build dist",
